crates/rattler_config/tests/snapshots/compat__parse__kitchen-sink.toml.snap
---
source: crates/rattler_config/tests/compat.rs
assertion_line: 64
expression: "(unused, normalized(config))"
---
(
    {},
    ConfigBase {
        common: CommonConfig {
            default_channels: Some(
                [
                    Name(
                        "conda-forge",
                    ),
                    Name(
                        "bioconda",
                    ),
                ],
            ),
            authentication_override_file: Some(
                "/path/to/auth.json",
            ),
            tls_no_verify: Some(
                false,
            ),
            tls_root_certs: Some(
                Webpki,
            ),
            mirrors: {
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "conda.anaconda.org",
                        ),
                    ),
                    port: None,
                    path: "/conda-forge",
                    query: None,
                    fragment: None,
                }: [
                    Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "mirror.example.com",
                            ),
                        ),
                        port: None,
                        path: "/conda-forge",
                        query: None,
                        fragment: None,
                    },
                    Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "backup.example.com",
                            ),
                        ),
                        port: None,
                        path: "/conda-forge",
                        query: None,
                        fragment: None,
                    },
                ],
            },
            build: BuildConfig {
                package_format: Some(
                    PackageFormatAndCompression {
                        archive_type: Conda,
                        compression_level: Highest,
                    },
                ),
            },
            channel_config: ChannelConfig {
                channel_alias: Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "conda.anaconda.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
                root_dir: "<normalized>",
            },
            repodata_config: RepodataConfig {
                default: RepodataChannelConfig {
                    disable_bzip2: Some(
                        true,
                    ),
                    disable_zstd: Some(
                        false,
                    ),
                    disable_sharded: Some(
                        false,
                    ),
                },
                per_channel: {
                    Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "prefix.dev",
                            ),
                        ),
                        port: None,
                        path: "/",
                        query: None,
                        fragment: None,
                    }: RepodataChannelConfig {
                        disable_bzip2: None,
                        disable_zstd: None,
                        disable_sharded: Some(
                            true,
                        ),
                    },
                },
            },
            concurrency: ConcurrencyConfig {
                solves: 0,
                downloads: 12,
                builds: 1,
            },
            proxy_config: ProxyConfig {
                https: Some(
                    Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "proxy.example.com",
                            ),
                        ),
                        port: Some(
                            8080,
                        ),
                        path: "/",
                        query: None,
                        fragment: None,
                    },
                ),
                http: Some(
                    Url {
                        scheme: "http",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "proxy.example.com",
                            ),
                        ),
                        port: Some(
                            8080,
                        ),
                        path: "/",
                        query: None,
                        fragment: None,
                    },
                ),
                non_proxy_hosts: [
                    "localhost",
                    "127.0.0.1",
                ],
            },
            s3_options: S3OptionsMap(
                {
                    "my-bucket": S3Options {
                        endpoint_url: Url {
                            scheme: "https",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: Some(
                                Domain(
                                    "s3.example.com",
                                ),
                            ),
                            port: None,
                            path: "/",
                            query: None,
                            fragment: None,
                        },
                        region: "eu-central-1",
                        force_path_style: true,
                    },
                },
            ),
            azure_options: AzureOptionsMap(
                {
                    PathStyle(
                        AccountPath {
                            host: AzureHost("127.0.0.1:10000"),
                            account: AccountName(
                                "devstoreaccount1",
                            ),
                        },
                    ): AzureEndpointOptions {
                        scheme: Http,
                        auth: {
                            ContainerName(
                                "general",
                            ): DefaultChain,
                        },
                    },
                    HostStyle(
                        AccountHost {
                            host: AzureHost("mycompany.blob.core.windows.net"),
                            account: AccountName(
                                "mycompany",
                            ),
                        },
                    ): AzureEndpointOptions {
                        scheme: Https,
                        auth: {
                            ContainerName(
                                "public",
                            ): Anonymous,
                            ContainerName(
                                "releases",
                            ): DefaultChain,
                        },
                    },
                },
            ),
            index_config: IndexConfig {
                default: IndexChannelConfig {
                    write_zst: Some(
                        true,
                    ),
                    write_shards: Some(
                        false,
                    ),
                    repodata_revisions: None,
                    package_revision_assignment: None,
                    base_url: None,
                    notices: None,
                    channel_relations: None,
                },
                per_channel: {
                    "s3://my-bucket/staging": IndexChannelConfig {
                        write_zst: None,
                        write_shards: None,
                        repodata_revisions: None,
                        package_revision_assignment: None,
                        base_url: Some(
                            "../packages/",
                        ),
                        notices: None,
                        channel_relations: None,
                    },
                },
            },
            run_post_link_scripts: Some(
                Insecure,
            ),
            allow_symbolic_links: Some(
                true,
            ),
            allow_hard_links: Some(
                false,
            ),
            allow_ref_links: Some(
                true,
            ),
        },
        extensions: NoExtension,
        loaded_from: [],
    },
)
