crates/rattler_config/tests/snapshots/compat__parse__override-layer.toml.snap
---
source: crates/rattler_config/tests/compat.rs
expression: "(unused, normalized(config))"
---
(
    {},
    ConfigBase {
        common: CommonConfig {
            default_channels: Some(
                [
                    Name(
                        "robostack",
                    ),
                ],
            ),
            authentication_override_file: None,
            tls_no_verify: Some(
                true,
            ),
            tls_root_certs: None,
            mirrors: {
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "conda.anaconda.org",
                        ),
                    ),
                    port: None,
                    path: "/bioconda",
                    query: None,
                    fragment: None,
                }: [
                    Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "mirror.example.com",
                            ),
                        ),
                        port: None,
                        path: "/bioconda",
                        query: None,
                        fragment: None,
                    },
                ],
            },
            build: BuildConfig {
                package_format: None,
            },
            channel_config: ChannelConfig {
                channel_alias: Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "conda.anaconda.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
                root_dir: "<normalized>",
            },
            repodata_config: RepodataConfig {
                default: RepodataChannelConfig {
                    disable_bzip2: Some(
                        false,
                    ),
                    disable_zstd: None,
                    disable_sharded: None,
                },
                per_channel: {
                    Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "prefix.dev",
                            ),
                        ),
                        port: None,
                        path: "/",
                        query: None,
                        fragment: None,
                    }: RepodataChannelConfig {
                        disable_bzip2: None,
                        disable_zstd: Some(
                            true,
                        ),
                        disable_sharded: None,
                    },
                },
            },
            concurrency: ConcurrencyConfig {
                solves: 0,
                downloads: 50,
                builds: 1,
            },
            proxy_config: ProxyConfig {
                https: None,
                http: None,
                non_proxy_hosts: [],
            },
            s3_options: S3OptionsMap(
                {
                    "other-bucket": S3Options {
                        endpoint_url: Url {
                            scheme: "https",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: Some(
                                Domain(
                                    "minio.example.com",
                                ),
                            ),
                            port: None,
                            path: "/",
                            query: None,
                            fragment: None,
                        },
                        region: "auto",
                        force_path_style: false,
                    },
                },
            ),
            azure_options: AzureOptionsMap(
                {
                    HostStyle(
                        AccountHost {
                            host: AzureHost("mycompany.blob.core.windows.net"),
                            account: AccountName(
                                "mycompany",
                            ),
                        },
                    ): AzureEndpointOptions {
                        scheme: Https,
                        auth: {
                            ContainerName(
                                "public",
                            ): Anonymous,
                            ContainerName(
                                "staging",
                            ): DefaultChain,
                        },
                    },
                },
            ),
            index_config: IndexConfig {
                default: IndexChannelConfig {
                    write_zst: None,
                    write_shards: None,
                    repodata_revisions: None,
                    package_revision_assignment: None,
                    base_url: None,
                    notices: None,
                    channel_relations: None,
                },
                per_channel: {},
            },
            run_post_link_scripts: None,
            allow_symbolic_links: None,
            allow_hard_links: None,
            allow_ref_links: None,
        },
        extensions: NoExtension,
        loaded_from: [],
    },
)
