crates/rattler_config/tests/snapshots/compat__parse__snake-case-aliases.toml.snap
---
source: crates/rattler_config/tests/compat.rs
expression: "(unused, normalized(config))"
---
(
    {},
    ConfigBase {
        common: CommonConfig {
            default_channels: Some(
                [
                    Name(
                        "conda-forge",
                    ),
                ],
            ),
            authentication_override_file: Some(
                "/path/to/auth.json",
            ),
            tls_no_verify: Some(
                true,
            ),
            tls_root_certs: Some(
                System,
            ),
            mirrors: {},
            build: BuildConfig {
                package_format: None,
            },
            channel_config: ChannelConfig {
                channel_alias: Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "conda.anaconda.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
                root_dir: "<normalized>",
            },
            repodata_config: RepodataConfig {
                default: RepodataChannelConfig {
                    disable_bzip2: Some(
                        true,
                    ),
                    disable_zstd: Some(
                        true,
                    ),
                    disable_sharded: None,
                },
                per_channel: {},
            },
            concurrency: ConcurrencyConfig {
                solves: 0,
                downloads: 50,
                builds: 1,
            },
            proxy_config: ProxyConfig {
                https: None,
                http: None,
                non_proxy_hosts: [],
            },
            s3_options: S3OptionsMap(
                {},
            ),
            index_config: IndexConfig {
                default: IndexChannelConfig {
                    write_zst: None,
                    write_shards: None,
                    repodata_revisions: None,
                    package_revision_assignment: None,
                    base_url: None,
                    channel_relations: None,
                },
                per_channel: {},
            },
            run_post_link_scripts: None,
            allow_symbolic_links: Some(
                false,
            ),
            allow_hard_links: Some(
                true,
            ),
            allow_ref_links: Some(
                false,
            ),
        },
        extensions: NoExtension,
        loaded_from: [],
    },
)
